--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.21.2",
     "axios": "^1.7.7",
+    "braintree-web-drop-in": "^1.43.0",
+    "braintree-web-drop-in-react": "^1.2.1",
     "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
