--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "braintree-web-drop-in": "^1.43.0",
     "braintree-web-drop-in-react": "^1.2.1",
     "cors": "^2.8.5",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
